--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.3.1"
+    "axios": "^0.20.0",
+    "discord.js": "^12.3.1",
+    "https": "^1.0.0"
   }
 }
